# tools

./: Cargo.toml  README.md  dev.sh  docker-compose.yml  main.sql  notes.md  test.sh
client/: .gitignore  Cargo.toml  Trunk.toml  index.html  notes.md  package-lock.json  package.json  run.sh
client/src/: election.rs  main.rs
client/styles/: tailwind.config.ts
core/: Cargo.toml
core/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
