[package]
name = "persistent_democracy_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { git = "https://github.com/blainehansen/sycamore", rev = "546a98889b37f5ebd8baf1dfb219533caeeeb83f" }
persistent_democracy_core = { path = "../core" }
