[package]
name = "adaptive_democracy_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# indextree = "4.5"
rust_decimal = { version = "1", features = ["maths"] }

[dev-dependencies]
proptest = "1"
rust_decimal_macros = "1"
