[package]
name = "adaptive_democracy_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web = { version = "4", features = ["macros", "rustls"] }
# tokio = { version = "0.2", features = ["sync"] }
